<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/bitmap"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/login_image_phone"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_75"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@mipmap/login_icon_phone_n_hdpi"

            />
        <EditText
            android:id="@+id/login_edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_name"
            android:layout_marginTop="@dimen/dp_78"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="18sp"
            android:textColorHint="@color/colorWhite"
            android:background="@null"
            android:layout_toRightOf="@+id/login_image_phone"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_95"
            android:background="@color/colorWhite"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/login_image_lock"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@mipmap/login_icon_lock_n_hdpi"

            />
        <EditText
            android:id="@+id/login_edit_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_pw"
            android:layout_marginTop="@dimen/dp_17"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="18sp"
            android:textColorHint="@color/colorWhite"
            android:background="@null"
            android:layout_toRightOf="@+id/login_image_lock"
            />

        <ImageView
            android:layout_width="@dimen/dp_12"
            android:layout_height="@dimen/dp_12"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_16"
            android:src="@mipmap/login_icon_eye_n_hdhpi"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@color/colorWhite"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20">
        <TextView
            android:id="@+id/text_resign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resign"
            android:textSize="@dimen/dp_15"
            android:textColor="#ffffff"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_20"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:background="@drawable/login_bg"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/dp_20"/>
    <Button
        android:id="@+id/btn_zhuce"
        android:layout_width="@dimen/dp_140"
        android:layout_height="@dimen/dp_20"
        android:layout_gravity="center_horizontal"
        android:text="@string/regist"
        android:background="@drawable/login_bg"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/dp_20"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_40"
        >

        <View
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textName"
            android:textColor="@color/colorWhite"/>

        <View
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorWhite"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20">

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_60"
            android:src="@mipmap/common_icon_weixin_n_hdpi"/>

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_60"
            android:src="@mipmap/login_icon_artificial_n_hdpi"/>

    </RelativeLayout>
</LinearLayout>